--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <h1>German Gerardo Guerci</h1>
+            <h1>German Gerardo Guerci</h1><br>
             <h3>Henry</h3>
             <h4>tarea de HTML / CSS</h4>
         </div>
